QWaylandTablet: Implement cursor

Currently we don't set a cursor for tablet devices,
so we get either a generic fallback cursor (KWin)
or no cursor at all (GNOME).

This makes sure we get the same cursor we get for
mouse input.

The code is mostly identical to the mouse cursor
handling, so refactor things a bit to share

Pick-to: 6.8
Fixes: QTBUG-105843
Fixes: QTBUG-123776
Change-Id: Ie626ff978d9b66ec422804a103699eebec85e267
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>