src/client/qwaylandinputdevice.cpp
@@ -29,6 +29,8 @@
 #include "qwaylandtextinputinterface_p.h"
 #include "qwaylandinputcontext_p.h"
 #include "qwaylandinputmethodcontext_p.h"
+#include "qwaylandcallback_p.h"
+#include "qwaylandcursorsurface_p.h"
 
 #include <QtGui/private/qpixmap_raster_p.h>
 #include <QtGui/private/qguiapplication_p.h>
@@ -152,80 +154,6 @@ QWaylandWindow *QWaylandInputDevice::Pointer::focusWindow() const
 
 #if QT_CONFIG(cursor)
 
-class WlCallback : public QtWayland::wl_callback {
-public:
-    explicit WlCallback(::wl_callback *callback, std::function<void(uint32_t)> fn)
-        : QtWayland::wl_callback(callback)
-        , m_fn(fn)
-    {}
-    ~WlCallback() override { wl_callback_destroy(object()); }
-    void callback_done(uint32_t callback_data) override {
-        m_fn(callback_data);
-    }
-private:
-    std::function<void(uint32_t)> m_fn;
-};
-
-class CursorSurface : public QWaylandSurface
-{
-public:
-    explicit CursorSurface(QWaylandInputDevice::Pointer *pointer, QWaylandDisplay *display)
-        : QWaylandSurface(display)
-        , m_pointer(pointer)
-    {
-        connect(this, &QWaylandSurface::screensChanged,
-                m_pointer, &QWaylandInputDevice::Pointer::updateCursor);
-    }
-
-    void reset()
-    {
-        m_setSerial = 0;
-        m_hotspot = QPoint();
-    }
-
-    // Size and hotspot are in surface coordinates
-    void update(wl_buffer *buffer, const QPoint &hotspot, const QSize &size, int bufferScale, bool animated = false)
-    {
-        // Calling code needs to ensure buffer scale is supported if != 1
-        Q_ASSERT(bufferScale == 1 || version() >= 3);
-
-        auto enterSerial = m_pointer->mEnterSerial;
-        if (m_setSerial < enterSerial || m_hotspot != hotspot) {
-            m_pointer->set_cursor(m_pointer->mEnterSerial, object(), hotspot.x(), hotspot.y());
-            m_setSerial = enterSerial;
-            m_hotspot = hotspot;
-        }
-
-        if (version() >= 3)
-            set_buffer_scale(bufferScale);
-
-        attach(buffer, 0, 0);
-        damage(0, 0, size.width(), size.height());
-        m_frameCallback.reset();
-        if (animated) {
-            m_frameCallback.reset(new WlCallback(frame(), [this](uint32_t time){
-               Q_UNUSED(time);
-               m_pointer->cursorFrameCallback();
-            }));
-        }
-        commit();
-    }
-
-    int outputScale() const
-    {
-        int scale = 0;
-        for (auto *screen : m_screens)
-            scale = qMax(scale, screen->scale());
-        return scale;
-    }
-
-private:
-    QScopedPointer<WlCallback> m_frameCallback;
-    QWaylandInputDevice::Pointer *m_pointer = nullptr;
-    uint m_setSerial = 0;
-    QPoint m_hotspot;
-};
-
 int QWaylandInputDevice::Pointer::idealCursorScale() const
 {
     if (seat()->mQDisplay->compositor()->version() < 3) {
@@ -342,7 +270,8 @@ void QWaylandInputDevice::Pointer::updateCursor()
     qCWarning(lcQpaWayland) << "Unable to change to cursor" << shape;
 }
 
-CursorSurface *QWaylandInputDevice::Pointer::getOrCreateCursorSurface()
+CursorSurface<QWaylandInputDevice::Pointer> *
+QWaylandInputDevice::Pointer::getOrCreateCursorSurface()
 {
     if (!mCursor.surface)
         mCursor.surface.reset(new CursorSurface(this, seat()->mQDisplay));
@@ -688,6 +617,9 @@ void QWaylandInputDevice::setCursor(const QCursor *cursor, const QSharedPointer<
 
     if (mPointer)
         mPointer->updateCursor();
+
+    if (mTabletSeat)
+        mTabletSeat->updateCursor();
 }
 #endif
 
